# gradient-skier

./: .gitignore  Makefile  README.md  gradient-engineer.spec  main.spec  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml
assets/themes/: orange.json
src/: bootstrap.py  config.json  config.py  generate_and_save_map.py  main.py  test_and_plot_map.py
src/core/: __init__.py  app_manager.py  map_manager.py
src/core/game/: __init__.py  _game_path_manager.py  _match.py  _path.py  _pathfinder.py  config.json  game_manager.py
src/core/state_managers/: __init__.py  base_state_manager.py  canvas_state_manager.py  game_state_manager.py  state_manager.py
src/interface/: _loading_manager.py  app.py  loading_manager.py  theme.py
src/interface/components/emoji_pin/: __init__.py  emoji_pin.py
src/interface/components/loading_frame/: __init__.py  loading_frame.py
src/interface/map_canvas/: __init__.py  _canvas_camera.py  _canvas_click_handler.py  _canvas_map_renderer.py  _canvas_path_renderer.py  _canvas_pins_renderer.py  _canvas_renderer.py  _canvas_scroller.py  map_canvas.py
src/interface/sidebar/: sidebar.py
src/terrain_map/: __init__.py  terrain_map.py
src/terrain_map/generator/: _corridor_generator.py  config_loader.py  corridor_generator.py  generator_config.json  generator_config.py  generator_config.txt  generator_config_explanation.md  generator_config_guide.md  map_generator.py
src/terrain_map/tools/: __init__.py  excavator_tool.py  filler_tool.py  grader_tool.py  terrain_tool.py
src/utils/: config.py
(+21 files in other folders)
