[tool.poetry]
name = "gradient-skier"
version = "0.1.0"
description = ""
authors = ["Dante Ferreira, Henrique Ceita"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14.0"
customtkinter = "*"
numpy = "*"
scipy = "*"
pillow = "*"
perlin-noise = "*"
matplotlib = "*"
plotly = "*"
cairosvg = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
