[tool.poetry]
name = "gradient-engineer"
version = "0.1.0"
description = ""
authors = ["Dante Ferreira, Henrique Ceita"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.0,<3.15"
customtkinter = "*"
numpy = "*"
scipy = "*"
pillow = "*"
noise = "*"
matplotlib = "*"
plotly = "*"
cairosvg = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
